--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="css/frontend.css">
 
     <!-- Polyfill(s) for older browsers -->
+
+    <!--connected jquery for toggle button-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!--connected bootstrap library for toggle button-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
     <script src="node_modules/core-js/client/shim.min.js"></script>
 
     <script src="node_modules/zone.js/dist/zone.js"></script>
